# business-finder

./: .codecov.yml  .coverage  .gitignore  CI_GUIDE.md  CLAUDE.md  Makefile  README.md  TUTORIAL.MD  config.yaml.example  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test_sheets_export.py
.github/workflows/: README.md  python-ci.yml  python-lint.yml  python-publish.yml  python-tests.yml
business_finder/: __init__.py  cli.py  config.py
business_finder/api/: geocoding.py  places.py
business_finder/exporters/: __init__.py  csv_exporter.py  json_exporter.py  sheets_exporter.py
scripts/: run_ci.sh
tests/: README.md  __init__.py  conftest.py  test_api.py  test_cli.py  test_config.py  test_exporters.py  test_geocoding.py  test_grid_search.py  test_integration.py  test_yaml_config.py
tests/fixtures/: mock_responses.py
web/: README.md  index.html  server.py
web/js/: integration.js  map-widget.js
