[tool.poetry]
name = "business-finder"
version = "0.1.0"
description = ""
authors = ["Ollie <products15816@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = ">=2.25.0"
argparse = ">=1.4.0"
pytest = ">=6.2.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
business-finder = "business_finder.cli:main"