[tool.poetry]
name = "business-finder"
version = "0.1.0"
description = ""
authors = ["Ollie <products15816@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = ">=2.25.0"
argparse = ">=1.4.0"
pytest = ">=6.2.5"
pytest-cov = ">=4.1.0"
pyyaml = ">=6.0"
google-api-python-client = ">=2.0.0"
google-auth-httplib2 = ">=0.1.0"
google-auth-oauthlib = ">=0.4.0"
gspread = ">=5.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
business-finder = "business_finder.cli:main"